@@ -48,6 +48,7 @@ library
                      , bytestring  >= 0.10
                      , time        >= 1.4
                      , containers  >= 0.4
+                     , old-locale  >= 1.0
 
                     -- Others
 
