@@ -10,6 +10,8 @@
 --
 module System.Environment.Parser.Internal where
 
+import           Control.Applicative
+import           Control.Monad
 import qualified Data.Attoparsec.Text       as At
 import qualified Data.ByteString            as S
 import qualified Data.ByteString.Char8      as S8
@@ -20,14 +22,15 @@ import qualified Data.Text                  as T
 import qualified Data.Text.Lazy             as TL
 import           Data.Time
 import qualified System.Environment         as Env
+import           System.Locale
 
 -- ----------------------------------------------------------------------------
 -- Getting to the environment
 
 -- | 'HasEnv' is an adapter abstracting the raw IO-based environment
 -- lookup. This lets us simulate a run of our parser in a fake environment.
-class HasEnv m where
-  getEnv :: String -> m String
+class Applicative r => HasEnv r where
+  getEnv :: String -> r String
 
 instance HasEnv IO where
   getEnv = Env.getEnv
@@ -36,9 +39,15 @@ instance HasEnv IO where
 -- ----------------------------------------------------------------------------
 -- A sneaky applicative
 
-class HasEnv m => Env m where
-  may :: m (Either String a) -> m a
+class HasEnv r => Env r where
+  liftFailure :: r (Either String a) -> r a
 
+env :: (Env r, FromEnv a) => String -> r a
+env = liftFailure . fmap parseEnv . getEnv
+
+data Tok = Tok String String
+data Cred = Cred Tok String String
+data Conf = Conf Cred Int Int
 
 -- ----------------------------------------------------------------------------
 -- Environment types
@@ -47,6 +56,9 @@ class HasEnv m => Env m where
 -- environment directly.
 class FromEnv a where
   parseEnv :: String -> Either String a
+
+instance FromEnv String where
+  parseEnv s = Right s
 
 instance FromEnv S.ByteString where
   parseEnv s = Right (S8.pack s)
@@ -82,4 +94,65 @@ instance FromEnv At.Number where
     txt <- parseEnv s
     At.parseOnly (At.signed At.number) txt
 
+-- ----------------------------------------------------------------------------
+-- Time parsers
+--
+-- These may not always be the most apropriate formats for parsing time,
+-- but customer parser can always be appended as needed. Instead, these
+-- provide convention.
 
+-- | Interprets a string as a decimal number of seconds
+instance FromEnv DiffTime where
+  parseEnv s =
+    realToFrac <$> (parseEnv s :: Either String At.Number)
+
+-- | Interprets a string as a decimal number of seconds
+instance FromEnv NominalDiffTime where
+  parseEnv s =
+    realToFrac <$> (parseEnv s :: Either String At.Number)
+
+-- | Assumes first that the date is formatted as the W3C Profile of ISO
+-- 8601 but also implements a few other formats.
+--
+-- @ 
+-- %Y-%m-%dT%H:%M:%S%Q%z
+--
+-- 1997-07-16T19:20:30.45+01:00
+-- 1997-07-16T19:20:30.45Z
+-- 1997-07-16T19:20:30Z
+-- @
+--
+-- @
+-- %a %b %_d %H:%M:%S %z %Y
+--
+-- Sat Jan 18 22:20:02 +0000 2014
+-- Sat Jan 18 22:20:02 2014
+-- Jan 18 22:20:02 2014
+-- @
+instance FromEnv UTCTime where
+  parseEnv s = 
+    e "bad UTC time" 
+    $ msum $ map (\format -> parseTime defaultTimeLocale format s) formats
+
+    where 
+      formats =
+        [ "%Y-%m-%dT%H:%M:%S%Q%z"
+        , "%Y-%m-%dT%H:%M:%S%QZ"
+        , "%a %b %_d %H:%M:%S %z %Y"
+        , "%a %b %_d %H:%M:%S %Y"
+        , "%b %_d %H:%M:%S %Y"
+        ]
+
+-- | Parses the Gregorian calendar format @\"%Y-%m-%d\"@.
+instance FromEnv Day where
+  parseEnv s =
+    e "bad date" $ parseTime defaultTimeLocale "%Y-%m-%d" s
+
+
+
+-- ----------------------------------------------------------------------------
+-- Utilities
+
+e :: String -> Maybe a -> Either String a
+e s Nothing  = Left s
+e _ (Just a) = Right a
